syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "Safir.Agent.Protos";

service Host {
  rpc GetInfo(google.protobuf.Empty) returns (HostInfo);
}

message HostInfo {
  string hostName = 1;
  string machineName = 2;
  string dataDirectory = 3;
  int32 maxDepth = 4;
}
